Layout issues

--- a/WebContent/bluemix.css
+++ b/WebContent/bluemix.css
@@ -115,8 +115,8 @@ h3 {
 	width: 22%;
 	float: left;
 	text-align: center;
-	padding-top:150px;
-	padding-bottom:102px;
+	padding-top:100px;
+	padding-bottom:90px;
 	font-weight: bold;
 	font-size: 110%;
 	
